fix: support Marketaux test on Java 17